fixed java 17 warnings I'd missed